<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        android:autofillHints="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/years"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edt_age"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toEndOf="@+id/edt_age"
        app:layout_constraintTop_toTopOf="@+id/edt_age"
        app:layout_constraintVertical_bias="0.523" />

    <RadioGroup
        android:id="@+id/radioGroup_gender"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView_gender"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_gender"
        app:layout_constraintTop_toTopOf="@+id/textView_gender">

        <RadioButton
            android:id="@+id/rb_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman" />

    </RadioGroup>

    <EditText
        android:id="@+id/edt_age"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_name"
        app:layout_constraintVertical_bias="0.021"
        android:autofillHints="@string/age" />

    <TextView
        android:id="@+id/textView_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_age"
        app:layout_constraintTop_toBottomOf="@+id/edt_age"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView_dm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/diabetes_mellitus"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_gender"
        app:layout_constraintTop_toBottomOf="@+id/textView_hd"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup_hyper"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView_hyper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/textView_hyper"
        app:layout_constraintTop_toTopOf="@+id/textView_hyper"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/rb_hypertension_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_hypertension_no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView_hyper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hypertension"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_gender"
        app:layout_constraintTop_toBottomOf="@+id/textView_gender"
        app:layout_constraintVertical_bias="0.043" />

    <RadioGroup
        android:id="@+id/radioGroup_hd"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView_hd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toEndOf="@+id/textView_hd"
        app:layout_constraintTop_toTopOf="@+id/textView_hd"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/rb_hd_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_hd_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_hd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heart_disease"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_hyper"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_hyper"
        app:layout_constraintTop_toBottomOf="@+id/textView_hyper"
        app:layout_constraintVertical_bias="0.048" />

    <RadioGroup
        android:id="@+id/radioGroup_smoking"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView_smoking"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup_dm"
        app:layout_constraintStart_toStartOf="@+id/radioGroup_dm"
        app:layout_constraintTop_toTopOf="@+id/textView_smoking"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/rb_smoking_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/rb_smoking_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_smoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoking"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_hd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_hd"
        app:layout_constraintTop_toBottomOf="@+id/textView_dm"
        app:layout_constraintVertical_bias="0.049" />

    <RadioGroup
        android:id="@+id/radioGroup_dm"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView_dm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toEndOf="@+id/textView_dm"
        app:layout_constraintTop_toTopOf="@+id/textView_dm"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/rb_dm_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/rb_dm_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="276dp"
        android:layout_height="47dp"
        android:layout_marginBottom="196dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup_smoking"
        app:layout_constraintStart_toStartOf="@+id/textView_smoking" />

    <ImageView
        android:id="@+id/imageView_vitalSign"
        android:layout_width="96dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save"
        app:layout_constraintVertical_bias="0.313"
        app:srcCompat="@drawable/vital_signs" />


</androidx.constraintlayout.widget.ConstraintLayout>