<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VitalSingsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/vital_signs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vitalSign_top"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/vitalSign_top"
        app:layout_constraintTop_toBottomOf="@+id/vitalSign_top"
        app:layout_constraintVertical_bias="0.027"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/vitalSign_top"
        android:layout_width="112dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        app:srcCompat="@drawable/vital_signs" />

    <ImageView
        android:id="@+id/imageView_HeartRate"
        android:layout_width="79dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vitalSign_top"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.136"
        app:srcCompat="@drawable/ic_heart_rate" />

    <ImageView
        android:id="@+id/imageView_respiratoryRate"
        android:layout_width="70dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_HeartRate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView_HeartRate"
        app:layout_constraintTop_toBottomOf="@+id/imageView_HeartRate"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/ic_rr" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="68dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_respiratoryRate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView_respiratoryRate"
        app:layout_constraintTop_toBottomOf="@+id/imageView_respiratoryRate"
        app:layout_constraintVertical_bias="0.069"
        app:srcCompat="@drawable/ic_temperature" />

    <TextView
        android:id="@+id/textView_heartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heart_rate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_HeartRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/imageView_HeartRate"
        app:layout_constraintTop_toTopOf="@+id/imageView_HeartRate" />

    <TextView
        android:id="@+id/textView_bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bpm"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_heartRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView_heartRate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_respiratoryRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respiratory_rate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_respiratoryRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_heartRate"
        app:layout_constraintTop_toTopOf="@+id/imageView_respiratoryRate"
        app:layout_constraintVertical_bias="0.541" />

    <TextView
        android:id="@+id/textView_rr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_m"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_respiratoryRate"
        app:layout_constraintEnd_toEndOf="@+id/textView_bpm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_bpm"
        app:layout_constraintTop_toTopOf="@+id/textView_respiratoryRate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_respiratoryRate"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/textView_degrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_temperature"
        app:layout_constraintEnd_toEndOf="@+id/textView_rr"
        app:layout_constraintStart_toStartOf="@+id/textView_rr"
        app:layout_constraintTop_toTopOf="@+id/textView_temperature"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>